--- a/file/.gitignore
+++ b/file/.gitignore
@@ -15,30 +15,148 @@ backups/
 exported_budget*.csv
 exports/
 
-# Python cache files
+# Python cache and build files
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Virtual environment
+# Virtual environments
 venv/
 env/
 ENV/
+.venv/
+.ENV/
+
+# Testing and coverage
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+pytest-report.html
+.cache/
+
+# MyPy type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+.project
+.pydevproject
 
 # OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # Log files
 *.log
+logs/
 
 # Temporary files
 *.tmp
 *.temp
+tmp/
+
+# Documentation builds
+docs/_build/
+docs/build/
+.readthedocs.yml
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# Poetry
+poetry.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# Security
+.secrets.baseline
+secrets/
+*.pem
+*.key
+
+# Performance profiling
+*.prof
+
+# CI/CD artifacts (local)
+.github/badges/
+*-report.json
+*-report.html
+
+# Package managers
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor artifacts
+.viminfo
+.swp
+
+# Local development
+local_settings.py
+.local/
